# FinPulse

./: .env_example  .gitignore  InstructionManual.docx  RudraSomaiya-JonathanProj.ipynb  agent_controller.py  app.py  calendar_tools.py  cleaned_data.xlsx  client-details.xlsx  client_plan_llm.py  client_tools.py  data.xlsx  data_cleaner.py  data_manager.py  email_sender.py  integrated-timeline copy.ipynb  integrated-timeline.ipynb  integrated.ipynb  jonathan-writing-profile.txt  jonathan_proj.docx  llm_parser.py  llm_router.py  marketoutlook-temporary.txt  migrate_to_mysql.py  migrate_to_postgres.py  preview_engine.py  pyproject.toml  readme.md  recommendationOutput.xlsx  reminders.xlsx  requirements.txt  rule-mining.ipynb  rules.py  scheduling_tools.py  stt_engine.py  test_backend.py  whatsapp_sender.py  writing-style-prompt.txt
.cursor/plans/: data-aware_ai_agent_upgrade_d6e81e40.plan.md
backend/: __init__.py  config.py  main.py  serializers.py
backend/routers/: agent.py  comms.py  llm.py  market.py  recommendations.py  reminders.py
documentation/: InstructionManual.docx  jonathan_proj.docx
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIAgentPanel.tsx  CalendarView.tsx  ClientDetailDrawer.tsx  RemindersList.tsx  Sidebar.tsx  Toast.tsx
frontend/lib/: api.ts  types.ts
