[project]
name = "jonathan"
version = "0.1.0"
description = "Financial Advisory App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mlxtend>=0.23.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.50.0",
    "google-generativeai>=0.8.3",
    "requests>=2.32.3",
    "openpyxl>=3.1.5",
    "streamlit-calendar>=1.0.1",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.50",
    "ipykernel>=7.1.0",
    "nbformat",
]
